# PROMETHEUS-V-1.1.1

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
build_truth/: 03_HERMES_AGENT_ZERO_HYDRA_CONVERGENCE.md
competition/: OMEGA_GATE_RUNBOOK.md
docs/: ARCHITECTURE.md  BUILD_TRUTH.md  COMPETITION_DEMO.md  FULL_CAMPAIGN.md  HYDRA_SERVERFORGE_CAMPAIGN.md  INSTALLATION.md  OFFICE_200.md  P1_RECURSIVE_FORGE_BUILD_TRUTH.md  PRODUCT_REQUIREMENTS.md  PROOF_SCHEMA.md  REFERENCE_ARCHITECTURE.md  ROADMAP.md  SERVERFORGE_BOOTSTRAP.md  SERVERFORGE_CASE_STUDY.md  THREAT_MODEL.md
missions/: HEPHAESTUS_OMEGA_COMMAND_TO_PROOF.md  self-build.json
proof/: P0_LOCAL_VERIFICATION.md  SERVERFORGE_LIVE_VERIFICATION.md
schemas/: mission.schema.json  packet.schema.json  receipt.schema.json  recursive-mission.schema.json  recursive-receipt.schema.json  serverforge-topology.schema.json
scripts/: Build-PrometheusRelease.ps1  Install-Prometheus.ps1  Invoke-Prometheus.ps1  Invoke-PrometheusHermesHydraConvergence.ps1  Open-PROMETHEUS-Omega-Gates.ps1  Publish-ConsoleRunCaseStudy.ps1  Publish-GhostAtlasCaseStudy.ps1  Run-PrometheusFullCampaign.ps1  Start-Prometheus.ps1
serverforge/: case-study-target.json  topology.json
tests/: test_case_study.py  test_case_study_target.py  test_codex_provider.py  test_engine.py  test_ledger.py  test_operations.py  test_policy.py  test_recursive.py  test_serverforge.py
workforce_spine/: AGENTS.md  CHATGPT_WORK_LAUNCH_PROMPT.md  CODEX_EXECUTION_PROMPT.md  PACKET_MANIFEST.sha256  (+7 more)
(+102 files in other folders)
